# Parapet

./: .gitignore  CHANGELOG.md  Cargo.toml  justfile  readme.md  rustfmt.toml
.claude/commands/: audit.md
DOCS/: DECISIONS.md  cleanup.md  conflict.md  futures.md  plan.md  review.md  theme-spec.md
DOCS/research/: app_launcher.md  bootstrap.md  config-migration-infra.md  hot-reload-diff.md  mpris.md  theming.md  weather.md  widget-candidates.md  workspaces-event-driven.md  workspaces-step2-filter.md
crates/frames_bar/: Cargo.toml
crates/frames_bar/src/: bar.rs  css.rs  main.rs
crates/frames_bar/src/widgets/: battery.rs  brightness.rs  clock.rs  cpu.rs  disk.rs  launcher.rs  media.rs  memory.rs  mod.rs  network.rs  volume.rs  weather.rs  workspaces.rs
crates/frames_bar/tests/: bar_window.rs
crates/frames_bar/themes/: default.css
crates/frames_core/: Cargo.toml
crates/frames_core/src/: config.rs  error.rs  lib.rs  poll.rs  widget.rs
crates/frames_core/src/widgets/: battery.rs  brightness.rs  clock.rs  cpu.rs  disk.rs  media.rs  memory.rs  mod.rs  network.rs  volume.rs  weather.rs  workspaces.rs
crates/frames_core/tests/: config_roundtrip.rs  poller_intervals.rs  widget_update.rs
crates/parapet_bar/src/: main.rs
crates/parapet_bar/src/widgets/: launcher.rs  workspaces.rs
crates/parapet_bar/themes/: default.css
crates/parapet_core/src/: config.rs  lib.rs
crates/parapet_core/src/widgets/: network.rs  volume.rs
crates/parapet_core/tests/: config_roundtrip.rs
doa/: plan_2026-03-18_volume-optimization.md  workspaces_xprop_helpers_2026-03-22.rs
standards/: AGENT_GUIDE.md  ARCHITECTURE.md  BAR_DESIGN.md  BUILD_GUIDE.md  CODING_STANDARDS.md  CONFIG_MODEL.md  PLATFORM_COMPAT.md  RELEASE_GUIDE.md  RULE_OF_LAW.md  SECURITY.md  TESTING_GUIDE.md  UI_GUIDE.md  WIDGET_API.md
